// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`query construction > construct mongodb filter query from permissions 1`] = `
{
  "$and": [
    {
      "$or": [
        {
          "id": {
            "$in": [
              "5ee204dcae8864186979d77f",
            ],
          },
          "org_id": {
            "$in": [
              "5ee204dcae8864186979d77f",
            ],
          },
        },
        {
          "id": {
            "$in": [
              "5ee204ddae8864186979d780",
            ],
          },
          "org_id": {
            "$in": [
              "5ee204ddae8864186979d780",
            ],
          },
        },
      ],
    },
    {
      "name": /\\^app\\.\\*/,
    },
  ],
}
`;

exports[`query construction > construct mongodb filter query from permissions using org scoped tools 1`] = `
{
  "$and": [
    {
      "$or": [
        {
          "_id": {
            "$in": [
              "5ee204dcae8864186979d77f",
            ],
          },
          "org_id": {
            "$in": [
              "5ee204dcae8864186979d77f",
              "5ee204dcae8864186979d77f",
            ],
          },
        },
        {
          "_id": {
            "$in": [
              "5ee204ddae8864186979d780",
            ],
          },
          "org_id": {
            "$in": [
              "5ee204ddae8864186979d780",
              "5ee204ddae8864186979d780",
            ],
          },
        },
      ],
    },
    {
      "name": /\\^app\\.\\*/,
    },
  ],
}
`;

exports[`query construction > construct query from relevant permissions 1`] = `
{
  "$and": [
    {
      "$or": [
        {
          "_id": {
            "$in": [
              "5ee204dcae8864186979d77f",
            ],
          },
          "org_id": {
            "$exists": false,
          },
        },
      ],
    },
    {
      "name": /\\^app\\.\\*/,
    },
  ],
}
`;

exports[`query construction > construct query with action and model wildcards 1`] = `
{
  "$and": [
    {
      "$or": [
        {
          "_id": {
            "$exists": true,
          },
          "org_id": {
            "$in": [
              "5ee204dcae8864186979d77f",
              "5ee204dcae8864186979d77f",
            ],
          },
        },
      ],
    },
    {
      "name": /\\^app\\.\\*/,
    },
  ],
}
`;

exports[`query construction > construct query with scoped and scopeless selector 1`] = `
{
  "$and": [
    {
      "$or": [
        {
          "_id": {
            "$in": [
              "5ee204dcae8864186979d77f",
            ],
          },
          "org_id": {
            "$exists": false,
          },
        },
        {
          "_id": {
            "$in": [
              "5ee204ddae8864186979d780",
            ],
          },
          "org_id": {
            "$in": [
              "5ee204dcae8864186979d77f",
              "5ee204dcae8864186979d77f",
            ],
          },
        },
      ],
    },
    {
      "name": /\\^app\\.\\*/,
    },
  ],
}
`;

exports[`query construction > construct query with scopeless selector 1`] = `
{
  "$and": [
    {
      "$or": [
        {
          "_id": {
            "$in": [
              "5ee204dcae8864186979d77f",
            ],
          },
          "org_id": {
            "$exists": false,
          },
        },
      ],
    },
    {
      "name": /\\^app\\.\\*/,
    },
  ],
}
`;

exports[`query construction > construct query with wildcards 1`] = `
{
  "$and": [
    {
      "$or": [
        {
          "_id": {
            "$exists": true,
          },
          "org_id": {
            "$in": [
              "5ee204dcae8864186979d77f",
              "5ee204dcae8864186979d77f",
            ],
          },
        },
      ],
    },
    {
      "name": /\\^app\\.\\*/,
    },
  ],
}
`;

exports[`query construction > should handle malformed ids correctly 1`] = `
{
  "$and": [
    {
      "$or": [
        {
          "_id": {
            "$in": [],
          },
          "org_id": {
            "$in": [
              "123",
            ],
          },
        },
      ],
    },
    {
      "name": /\\^app\\.\\*/,
    },
  ],
}
`;
